<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Syncthing-Fork</string>
    <string name="app_description">An open, trustworthy and decentralized file synchronization application.</string>
    <string name="welcome_title">Welcome to \nSyncthing for Android</string>
    <string name="introduction">Introduction</string>
    <string name="welcome_text">Syncthing is an open-source file synchronization application. To share data with other devices, you need to add their unique device IDs to the device list. Afterwards you can select which folders to share with which devices.
\n
\nPlease report any problems you encounter via GitHub.</string>
    <string name="storage_permission_title">Storage Permission</string>
    <string name="storage_permission_desc">Syncthing needs to access your storage to do file synchronization.</string>
    <string name="dialog_all_files_access_not_supported">Your device does not support all files access</string>
    <string name="ignore_doze_permission_title">Battery Optimization</string>
    <string name="ignore_doze_permission_os_notice">Android TV\'s are known to occasionally end the app when it\'s running in the background. A solution is available on the wiki at \'%1$s/%2$s\'.</string>
    <string name="ignore_doze_permission_desc">Android may stop synchronization after some time. To prevent this, turn off battery optimization. Some devices have additional task-killing apps preinstalled. You should add Syncthing to their whitelist, as well.</string>
    <string name="toast_ignore_doze_permission_required">This app only works reliably if it is exempted from \"doze\" power save mode.</string>
    <string name="dialog_disable_battery_optimizations_not_supported">Your device does not support disabling battery optimizations</string>
    <string name="dialog_confirm_skip_ignore_doze_permission">Careful: If SyncthingNative is interrupted and does something strange, you\'re to blame. Only skip in case your device does not support granting the permission. Really skip?</string>
    <string name="location_permission_title">Location Permission</string>
    <string name="location_permission_desc">Syncthing can be configured to work on selected Wi-Fi networks. Android requires the app to have location permission to read the active Wi-Fi network name. If you want to use this feature, press the button above. You may skip this step. See our privacy policy for more details.</string>
    <string name="location_permission_desc_api_29">Tip for Android 10+: \"Allow all the time\"</string>
    <string name="local_network_permission_title">Local Network Permission</string>
    <string name="local_network_permission_desc">On Android 17 and newer, local network access requires explicit permission. This is needed for local discovery and direct transfers on your LAN.</string>
    <string name="notification_permission_title">Notification Permission</string>
    <string name="notification_permission_desc">Required to show notifications regarding new device connections, folder sharing requests and to keep the service alive and connected.</string>
    <string name="toast_notification_permission_required">Syncthing requires the notification permission to keep its service alive and connected.</string>
    <string name="key_generation_title">Key Generation</string>
    <string name="key_generation_success">Secure keys for private data exchange have been successfully generated.</string>
    <string name="back">Back</string>
    <string name="cont">Continue</string>
    <string name="finish">Finish</string>
    <string name="generic_example">Example</string>
    <string name="generic_error">Error</string>
    <string name="generic_help">Help</string>
    <string name="grant_permission">Grant permission</string>
    <string name="permission_granted">Permission granted</string>
    <string name="reason">Reason:</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <string name="page_x_of_y">Page %1$s of %2$s</string>
    <string name="main_menu">Main Menu</string>
    <string name="refresh">Refresh</string>
    <string name="photo_shoot_launcher_title">Sync. Camera</string>
    <string name="photo_shoot_activity_title">Syncthing-Fork Camera</string>
    <string name="photo_shoot_intro_welcome_title">Welcome to Syncthing Camera</string>
    <string name="photo_shoot_intro_permission_title">Required permissions</string>
    <string name="photo_shoot_intro_no_camera">Sorry, this device doesn\'t have a camera.</string>
    <string name="photo_shoot_intro_missing_permissions">We require storage and camera permission to continue.</string>
    <string name="grant_storage_permission">Grant storage permission</string>
    <string name="grant_camera_permission">Grant camera permission</string>
    <string name="photo_shoot_intro_permission_desc">Syncthing Camera requires your consent to shoot pictures and store them on your device. This feature is optional. To use it, grant permissions and tap \"Continue\". We will setup a Syncthing Camera folder for you which you can share with other Syncthing devices later.</string>
    <string name="photo_shoot_take_picture_success">Successfully saved picture to the Syncthing Camera folder.</string>
    <string name="photo_shoot_take_picture_failure">Failed to take a picture or you\'ve cancelled.</string>
    <string name="default_syncthing_camera_folder_label">Syncthing Camera</string>
    <string name="activity_main_bottom_navigation_rescan_all">Rescan All</string>
    <string name="open_main_menu">Open Main Menu</string>
    <string name="close_main_menu">Close Main Menu</string>
    <string name="exception_known_bug_notice">A known bug that has not been solved yet has been encountered. See %1$s/%2$s for more information. Please leave us a precise description of what happened beforehand.</string>
    <string name="dialog_exit_while_running_as_service_title">Confirm to quit app</string>
    <string name="dialog_exit_while_running_as_service_message">For your consideration: You configured the app to start automatically on boot. Therefore it monitors run conditions and syncs at any time in the background when conditions match. You should only quit manually if you run into severe problems. Otherwise, disable \'Start automatically on boot \' in the settings. Would you like to quit now until the device rebooted\?</string>
    <string name="add_folder">Add Folder</string>
    <string name="share_device_id">Share Device ID</string>
    <string name="send_device_id_to">Send Device ID to</string>
    <string name="usage_reporting_dialog_title">Allow Anonymous Usage Reporting\?</string>
    <string name="usage_reporting_dialog_description">The encrypted usage report is sent daily. It is used to track common platforms, folder sizes and app versions. If the reported data set is changed you will be prompted with this dialog again.
\n
\nThe aggregated statistics are publicly available at https://data.syncthing.net.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_website">Open Website</string>
    <string name="syncthing_usage_stats_url" translatable="false">https://data.syncthing.net</string>
    <string name="toast_write_storage_permission_required">Write storage permission is required for this app</string>
    <string name="device_rejected">Device \"%1$s\" wants to connect</string>
    <string name="folder_rejected">Device \"%1$s\" wants to share folder \"%2$s\"</string>
    <string name="web_gui_creating_key">Generating secure keys. This may take a few minutes…</string>
    <string name="folders_fragment_title">Folders</string>
    <string name="folder_list_empty">No folders found</string>
    <plurals name="files">
        <item quantity="one">%1$d / %2$d File</item>
        <item quantity="other">%1$d / %2$d Files</item>
    </plurals>
    <plurals name="conflicts">
        <item quantity="one">%1$d conflict</item>
        <item quantity="other">%1$d conflicts</item>
    </plurals>
    <string name="override_changes">Override changes</string>
    <string name="override_changes_question">This will undo all changes made on the other devices sharing this folder. Proceed\?</string>
    <string name="revert_local_changes">Revert local changes</string>
    <string name="delete_unexpected_items">Delete unexpected items</string>
    <string name="revert_local_changes_question">This will undo all changes made on this device within that folder. Proceed\?</string>
    <string name="open_file_manager">Open file manager</string>
    <string name="open_file_with">Open file with</string>
    <string name="open_file_no_compatible_app">No app found to open the file.</string>
    <string name="suggest_file_manager_app_dialog_title">No compatible file manager app found</string>
    <string name="suggest_file_manager_app_dialog_text">We recommend you to install the open-source file manager app \'Material Files\'. Would you like to open its app store page\?</string>
    <string name="devices_fragment_title">Devices</string>
    <string name="devices_list_empty">No devices configured. Tap to add a new device.</string>
    <string name="no_devices_configured">No devices configured.
\nBegin by adding a device now.</string>
    <string name="deviceEncryptionPasswordHint">If untrusted, enter encryption password</string>
    <string name="device_up_to_date">Up to Date</string>
    <string name="device_syncing">Syncing (%1$d%%)</string>
    <string name="device_syncing_percent_bytes">Syncing (%1$d%%, %2$s)</string>
    <string name="device_disconnected">Disconnected</string>
    <string name="device_disconnected_not_synced">Disconnected (%1$s pending)</string>
    <string name="device_paused">Paused</string>
    <string name="device_state_unused">Unused</string>
    <string name="device_state_unknown">Unknown</string>
    <string name="device_last_seen">Last seen: %1$s</string>
    <string name="device_last_seen_never">Never</string>
    <string name="shared_folders_title_colon">"Folders: "</string>
    <string name="download_title">Download</string>
    <string name="upload_title">Upload</string>
    <string name="status_fragment_title">Status</string>
    <string name="button_follow_run_conditions">FOLLOW RUN CONDITIONS</string>
    <string name="button_force_start">FORCE START
\nIGNORE RUN CONDITIONS</string>
    <string name="button_force_stop">FORCE STOP
\nIGNORE RUN CONDITIONS</string>
    <string name="syncthing_starting">Syncthing is starting.</string>
    <string name="syncthing_running">Syncthing is running.</string>
    <string name="syncthing_not_running">Syncthing is not running.</string>
    <string name="syncthing_has_crashed">Syncthing has crashed.</string>
    <string name="download_title_colon">"Download: "</string>
    <string name="upload_title_colon">"Upload: "</string>
    <string name="ram_usage">RAM Usage</string>
    <string name="announce_server">Configured Announce Server</string>
    <string name="uptime">Uptime</string>
    <string name="restart">Restart</string>
    <string name="dialog_confirm_restart">Do you want to restart Syncthing\?</string>
    <string name="folder_id">Folder ID</string>
    <string name="folder_label">Folder Label</string>
    <string name="directory">Directory</string>
    <string name="advanced_directory_selection">Advanced Directory Selection</string>
    <string name="folder_fileWatcher">Watch for changes</string>
    <string name="recent_changes_title">Recent changes</string>
    <string name="web_gui_title">Web GUI</string>
    <string name="settings_title">Settings</string>
    <string name="category_backup">Import and Export</string>
    <string name="syncthing_version_title">Syncthing Version</string>
    <string name="exit">Exit</string>
    <string name="show_device_id">Show device ID</string>
</resources>